--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -32,9 +32,9 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="#!"><i class="material-icons">help</i>Explore Questions</a></li>
         <li><a class="waves-effect" href="#!"><i class="material-icons">create</i>Add a Question</a></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">assignment</i>Explore Resources</a></li>
+        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources</a></li>
         <li><a class="waves-effect" href="#!"><i class="material-icons">public</i>Community Map</a></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
+        <li><a class="waves-effect" href="/howto" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="#!"><i class="material-icons">account_circle</i>Profile</a></li>
         <li><div class="divider"></div></li>
         <li>
