make images and css work

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav class="white z-depth-0">
         <a href="#" class="brand-logo right grey-text darken-4">
-            <!--<img src="images/logo.png">-->
+            <!--<img src="/images/logo.png">-->
             <i class="material-icons">exit_to_app</i> logout
         </a>
         <a href="#" data-target="slide-out"
@@ -22,26 +22,26 @@
     <ul id="slide-out" class="sidenav sidenav-fixed">
         <li><div class="user-view">
             <div class="white center-align">
-                <!--<img src="images/office.jpg">-->
-                <img src="images/logo.png">
+                <!--<img src="/images/office.jpg">-->
+                <img src="/images/logo.png">
             </div>
-            <!--<a href="#user"><img class="circle" src="images/yuna.jpg"></a>-->
+            <!--<a href="#user"><img class="circle" src="/images/yuna.jpg"></a>-->
             <!--<a href="#name"><span class="white-text name">Justin Duffy</span></a>-->
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">help</i>Explore Questions</a></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">create</i>Add a Question</a></li>
+        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
+        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
         <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources</a></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">public</i>Community Map</a></li>
+        <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li>
         <li><a class="waves-effect" href="/howto" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
-        <li><a class="waves-effect" href="#!"><i class="material-icons">account_circle</i>Profile</a></li>
+        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
         <li><div class="divider"></div></li>
         <li>
             <div class="app-download-links">
-                <a href="https://itunes.apple.com/us/app/startsole-self-organized-learning-environment/id1097411683?mt=8"><img src="images/app.png">
+                <a href="https://itunes.apple.com/us/app/startsole-self-organized-learning-environment/id1097411683?mt=8"><img src="/images/app.png">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.startsole.mobileapp&hl=en"><img src="images/android.png">
+                <a href="https://play.google.com/store/apps/details?id=com.startsole.mobileapp&hl=en"><img src="/images/android.png">
                 </a>
             </div>
         </li>
