--- a/views/history.hbs
+++ b/views/history.hbs
@@ -1,1 +1,148 @@
 <h1>StartSOLE History!</h1>
+
+
+<hr>
+		  <div class="row">
+			<div class="col m12 l10">
+			<h4>What is SOLE?</h4>
+			  <div id="history" class="section scrollspy">
+			  	<h5>History</h5>
+					<p class="left-align light">In 1999, educational researcher Dr. Sugata Mitra conducted his pioneering <a href="http://www.ted.com/talks/sugata_mitra_shows_how_kids_teach_themselves" target="_blank">“Hole in the Wall”</a> experiments to study how children learn in self-organized settings. In New Delhi and remote areas of India, students who had little to no formal education were given access to a computer and high speed internet while a camera monitored their interactions. The results were incredible and almost impossible to believe. Children with little or no input from an adult instructor led themselves on a process of enthusiastic exploration, discovery, and peer coaching that resulted in the ability to learn almost anything- new languages, the solution to complex questions, science and math, and more. Fourteen years of research and iteration since then continue to support these startling results. Professor Mitra has honed this work into a concept of Self-Organizing Learning Environments or SOLEs, which draw on children’s natural curiosity to create a dynamic space for students to learn, interact and develop critical problem-solving skills. Professor Mitra’s vision has earned him the first ever one million dollar TED Prize. In January of 2015 SOLE CLE was launched. SOLE CLE supports the development of a self-sustaining network of practitioners implementing SOLE in schools and educational entities within the Cleveland Region and beyond.</p>
+
+				  	<div class="video-container no-controls">
+					  	<iframe width="853" height="480" src="https://www.youtube.com/embed/y3jYVe1RGaU?rel=0&amp;showinfo=0?&amp;iv_load_policy=3" frameborder="0" allowfullscreen></iframe>
+				  	</div>
+</div>
+
+			  <div id="solecle" class="section scrollspy">
+			  	<h5>SOLE CLE</h5>
+				<p><a href="http://www.tedxcle.com/jeffrey-mcclellan/" target="_blank">Jeff McClellan</a> was the founding Head of School for <a href="http://www.mc2stemhighschool.org/" target="_blank">MC<sup>2</sup>STEM High School</a> and is now the Founding Director of SOLE CLE.  SOLE CLE has a vision for turning SOLE into a mainstream movement. We are building a system by connecting innovative educators, community institutions and partners with entrepreneurs (who would normally find themselves in the private sector) to impact the future of education. We are thankful to the DBJ Foundation for seeing the potential in this movement.</p>
+                <div class="row">
+			     <div class="col s12 m6">
+                    <div class="video-container no-controls">
+                    <iframe width="853" height="480" src="https://www.youtube.com/embed/h6TmvUDimoU?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                     <p></p>
+                 </div>
+                 <div class="col s12 m6">
+
+                    <div class="video-container no-controls">
+                    <iframe width="853" height="480" src="https://www.youtube.com/embed/z1GVX_jegxw?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    </div>
+                  </div>
+			  </div>
+
+			  <div id="news" class="section scrollspy">
+			  	<h5>SOLE CLE in the News</h5>
+                  <div class="row">
+                      <div class="col s3">
+                          <a href="http://www.gettingsmart.com/2017/04/sole-hacking-todays-education-for-the-future/"
+                             target="_blank"><img
+                                  src="/images/what-is-sole/getting-smart.jpg" alt=""
+                                  class="responsive-img hide-on-small-only"></a>
+                      </div>
+                      <div class="col s12 m9">
+                          <p>
+                          <blockquote>SOLE is transformational and extremely simple to implement. It integrates the use
+                              of technology with elements of problem-based learning, flipping the classroom and making
+                              students the leaders of their learning experience. While other pedagogies produce similar
+                              results, none can match the simplicity of implementation and organic spread.
+                          </blockquote>
+                          <strong>Getting Smart</strong> - <i><a
+                              href="http://www.gettingsmart.com/2017/04/sole-hacking-todays-education-for-the-future/"
+                              target="_blank">SOLE: Hacking Today’s Education for the Future</a></i>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col s3">
+                          <a href="http://www.nort2h.org/archived-episodes.html" target="_blank"><img
+                                  src="/images/what-is-sole/nort2h.jpg" alt="" class="responsive-img hide-on-small-only"></a>
+                      </div>
+                      <div class="col s12 m9">
+                          <p>
+                          <blockquote>NORT2H (the Northern Ohio Research and Training Technology Hub) helps districts
+                              make informed decisions concerning meaningful technology integration. Their <i>Innovators
+                                  in Education</i> series featured an interview about SOLECLE and our growth in the
+                              region.
+                          </blockquote>
+                          <strong>NORT2H</strong> - <i><a href="http://www.nort2h.org/archived-episodes.html"
+                                                          target="_blank">Jeff McClellan (4/6/2017) Founding Director of
+                          SOLE Cleveland</a></i>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col s3">
+                        <img src="/images/what-is-sole/plaindealer.jpg" alt="" class="responsive-img hide-on-small-only">
+                      </div>
+                      <div class="col s12 m9">
+                          <p>
+                          <blockquote>Nine months after introducing the concept, SOLE is in use in more than 100 state classrooms...Orange Math teacher Christa Krohn, who teaches an accelerated eighth grade math class, experimented with the SOLE concept in her classroom last week, with great success. "The key is having the right question," she said. "You don't want it to be too easy so students can find the answer right away, but you also don't want it so difficult that they get discouraged. But I can see how this process can be incredibly successful with all levels of students."</blockquote>
+                          <strong>The Cleveland Plain Dealer</strong> - <i><a href="http://www.cleveland.com/education/index.ssf/2015/09/self_organizing_learning_educa.html" target="_blank">Self Organizing Learning Education teaches kids to teach themselves</a></i>
+                          </p>
+                      </div>
+                    </div>
+                  <div class="row">
+                      <div class="col s3">
+                        <img src="/images/what-is-sole/schoolinthecloud.jpg" alt="" class="responsive-img hide-on-small-only">
+                      </div>
+                      <div class="col s12 m9">
+                          <p>
+                          <blockquote>The really incredible thing is that there is no requirement for teachers to try SOLE, it is not a top-down policy, McClellan simply introduced the concept and then waited for people to come and ask him about it. Which they did. Lots of them. He suggests that there are two reasons why it’s being so widely used: it’s so easy to implement and it’s incredibly engaging for students, and he speaks with evident pride about the way that he has seen regular SOLE use beginning to change the learning identity of students from passive consumers to learners who are actively creating their own opportunities.</blockquote>
+                          <strong>The School in the Cloud</strong> - <i><a href="https://www.theschoolinthecloud.org/updates/sole-cleveland-goes-from-strength-to-strength" target="_blank">SOLE Cleveland goes from strength to strength</a></i>
+                          </p>
+                      </div>
+                    </div>
+                  <div class="row">
+                      <div class="col s3">
+                        <img src="/images/what-is-sole/kqed.jpg" alt="" class="responsive-img hide-on-small-only">
+                      </div>
+                      <div class="col s12 m9">
+                          <p>
+                          <blockquote>“Seeing them take charge has really showed us that maybe we are being a little too rigid and structured, and not trusting our students enough,” ... “It almost changes the way you see the world,” said Campus International principal Julie Beers. “Students are always coming up with great questions, and then you’re wondering and looking up the answer.”</blockquote>
+                          <strong>KQED News</strong> - <i><a href="http://ww2.kqed.org/mindshift/2015/10/07/messy-works-how-to-apply-self-organized-learning-in-the-classroom/" target="_blank">Messy Works: How to Apply Self-Organized Learning in the Classroom</a></i>
+                          </p>
+                      </div>
+                    </div>
+                  </div>
+
+
+                <div id="othersites" class="section scrollspy">
+                    <h5>Other SOLE Sites</h5>
+                    <p>The SOLE community has been growing for several years now and there are lots of other sites
+                        around the world supporting this work. Check out a few of our friends in faraway places,
+                        and feel free to <a href="mailto:sole.cleveland@gmail.com?Subject=SOLE%20Site" target="_blank">contact
+                            us</a> if you'd like to get your site added to this list:</p>
+                    <ul>
+                        <li><a href="https://www.theschoolinthecloud.org/" target="_blank">School in the Cloud</a></li>
+                        <li><a href="http://www.soleargentina.org/" target="_blank">SOLE Argentina</a></li>
+                        <li><a href="http://www.solecolombia.org/" target="_blank">SOLE Colombia</a></li>
+                        <li><a href="http://www.sole-nyc.com/" target="_blank">SOLE NYC</a></li>
+                        <li><a href="http://www.solemexico.com/" target="_blank">SOLE Mexico</a></li>
+                    </ul>
+                </div>
+
+			</div>
+			<div class="col hide-on-med-and-down l2">
+				<div id="pushpin-wrapper" style="max-width:140px;">
+  				  <img src="/images/sole-graphic-logo-small.png">
+				  <ul class="pushpin-item section table-of-contents">
+					<li><a href="#history">History</a></li>
+					<li><a href="#solecle">SOLE CLE</a></li>
+                    <li><a href="#news">In the News</a></li>
+                    <!--<li><a href="#socialmedia">Social Media</a></li>-->
+                      <li><a href="#othersites">Other Sites</a></li>
+				  </ul>
+			  </div>
+			</div>
+		  </div>
+
+
+			<script>
+				$.ready(function () {
+					$('#pushpin-wrapper').pushpin({ top:141.5, offset:74 });
+					$('.scrollspy').scrollSpy();
+				})
+			</script>
