--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,7 +3,9 @@
 </footer>
 
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="/js/materialize.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         console.log("DOM content loaded!");
