rename name to text for consistency

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,7 @@
 <h2>SOLEs</h2>
 <ul>
 {{#each soles}}
-  <li>{{name}} by {{author}}</li>
+  <li>{{text}} by {{author}}</li>
 {{/each}}
 </ul>
 
@@ -15,13 +15,13 @@
 <h3>My questions:</h3>
 <ul>
 {{#each questions.mine}}
-  <li>{{name}}</li>
+  <li>{{text}}</li>
 {{/each}}
 </ul>
 
 <h3>My favorite questions:</h3>
 <ul>
 {{#each questions.favorites}}
-  <li>{{name}}</li>
+  <li>{{text}}</li>
 {{/each}}
 </ul>
