add a starting point for a questions controller

--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -1,1 +1,7 @@
 <h1>Questions page!</h1>
+
+<hr>
+
+{{#each questions}}
+  <li>{{text}} (<a href="#">Copy</a> | <a href="#">Favorite</a>)</li>
+{{/each}}
