--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -1,1 +1,96 @@
 <h1>Resources page!</h1>
+
+<hr>
+
+
+<div masonry class="row gallery" style="margin-bottom: 0;">
+{{#if resources}}
+  {{#each resources}}
+  <div class="col s12 l6 gallery-item gallery-horizontal gallery-expand gallery-filter">
+      <div class="gallery-curve-wrapper">
+          <a class="gallery-cover gray" style="max-height: 300px;">
+              <img class="responsive-img" src="/images/resources/{{image}}" alt="resource preview image">
+          </a>
+          <div class="gallery-header" style="max-height: 300px; position:relative">
+              <h5>{{title}}</h5>
+              <p class="resource-description short-description">{{ short }}</p>
+              <p class="resource-description long-description">{{ description }}</p>
+              <div id="gallery-resources-header-download-button"
+                   style="position:absolute; bottom:10px; right:10px">
+                  <a  target="_blank"
+                     href="/resources/{{ file }}"
+                     ng-click="$event.stopImmediatePropagation();">
+                      Download <i class="material-icons">file_download</i>
+                  </a>
+                  <a ui-sref="login"
+                     onclick="event.stopImmediatePropagation();Materialize.toast('Login to download resources', 4000);">
+                      Download <i class="material-icons">file_download</i>
+                  </a>
+              </div>
+          </div>
+          <div class="gallery-body">
+              <div class="title-wrapper">
+                  <h3>{{ title }}</h3>
+              </div>
+              <div>
+                  <p class="flow-text">{{ description }}</p>
+                  <p class="flow-text">
+                      Submitted by
+                      <span>
+                        {{#each authors}}
+                        <a href="mailto:{{ email }}?Subject=SOLE%20CLE%20Resources"
+                           target="_blank">
+                          {{ name }}
+                        </a>
+                        {{/each}}
+                      </span>
+                  </p>
+              </div>
+          </div>
+          <div class="gallery-action">
+              <a href="/resources/{{ file }}"
+                 ng-click="$event.stopImmediatePropagation();"
+                 class="btn-floating btn-large waves-effect waves-light"
+                 target="_blank">
+                  <i class="material-icons">file_download</i>
+              </a>
+              <a ng-click="$event.stopImmediatePropagation();Resources.promptLogin();"
+                 class="btn-floating btn-large waves-effect waves-light">
+                  <i class="material-icons">file_download</i>
+              </a>
+          </div>
+      </div>
+  </div>
+  {{/each}}
+
+
+
+{{else}}
+
+<div class="row">
+  <div class="col s12 m8 offset-m2 l6 offset-l3 gallery-item">
+    <div class="gallery-curve-wrapper">
+      <div class="gallery-header" style="max-height: 300px; position:relative">
+        <a href="mailto:support@startsole.org?Subject=SOLE%20CLE%20Resources"
+           target="_blank">
+          <div class="red lighten-1 card small valign-wrapper center-align" style="margin-top: 0;">
+            <div style="width:100%">
+              <span class="card-title white-text text-darken-4">
+                Nothing here...yet<br>
+              </span>
+              <p class="flow-text white-text text-darken-4 center-align valign"
+                 style="margin:10px">
+                Share your SOLE Resource with the community.<br>
+                <i class="material-icons">send</i>
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{/if}}
+
+</div>
