--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -34,7 +34,7 @@
         <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
         <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources</a></li>
         <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li>
-        <li><a class="waves-effect" href="/howto" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
+        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
         <li><div class="divider"></div></li>
