add a view and route for adding a lesson plan. closes #12

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -38,6 +38,8 @@
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
         <li><div class="divider"></div></li>
+        <li><a class="waves-effect" href="/sole-create"><i class="material-icons">add</i>Plan A Lesson</a></li>
+        <li><div class="divider"></div></li>
         <li>
             <div class="app-download-links">
                 <a href="https://itunes.apple.com/us/app/startsole-self-organized-learning-environment/id1097411683?mt=8"><img src="/images/app.png">
