add a view and route for a list of soles. may not make it into the final cut here but adding it for now and we can talk about this later. closes #14

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -37,6 +37,7 @@
         <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>Profile</a></li>
+        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>Your SOLEs</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/sole-create"><i class="material-icons">add</i>Plan A Lesson</a></li>
         <li><div class="divider"></div></li>
