--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -5,7 +5,7 @@
 
 {{#if soles}}
 <h3>You have {{soles.length}} SOLEs:</h3>
-<table>
+<table class="responsive-table">
 
 	<tr>
 		<th>Planned Date</th>
