add some simple breadcrumbs nav

--- a/views/history.hbs
+++ b/views/history.hbs
@@ -1,7 +1,5 @@
-<h1>StartSOLE History!</h1>
+<a href="/">Home</a> > <strong>History of StartSOLE</strong><br>
 
-
-<hr>
 		  <div class="row">
 			<div class="col m12 l10">
 			<h4>What is SOLE?</h4>
