--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,7 @@
-<h1>StartSOLE Home Page!</h1>
+{{!-- <strong>Home</strong><br> --}}
 
-<hr>
+<h1>Welcome to StartSOLE2!</h1>
+
 
 <h2>SOLEs</h2>
 <h3>Upcoming</h3>
