--- a/views/how-to-sole.hbs
+++ b/views/how-to-sole.hbs
@@ -1,7 +1,4 @@
-<h1>How to SOLE!</h1>
-
-
-<hr>
+<a href="/">Home</a> > <strong>How to SOLE</strong><br>
 
 <div class="row">
     <div class="col s12 offset-l1 l10">
