--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -1,6 +1,4 @@
-<h1>Single question page!</h1>
-
-<hr>
+<a href="/">Home</a> > <a href="/">Questions</a> > <strong>{{text}}</strong><br>
 
 <h1>{{text}}</h1>
 
