--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -1,8 +1,4 @@
-<h1>Questions page!</h1>
-
-<hr>
-
-
+<a href="/">Home</a> > <strong>Explore Questions</strong><br>
 
 <div class="row" style="padding-top:20px;">
 	<div class="col offset-s10 s2 offset-m9 m3 offset-l8 l4">
