--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -1,6 +1,4 @@
-<h1>Resources page!</h1>
-
-<hr>
+<a href="/">Home</a> > <strong>Resources</strong><br>
 
 
 <div masonry class="row gallery" style="margin-bottom: 0;">
