--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -1,6 +1,11 @@
-<h1>add a sole page!</h1>
-
-<hr>
+<a href="/">Home</a> > <a href="/soles">SOLEs</a> >
+<strong>
+{{#if sole}}
+  Edit
+{{else}}
+  Add
+{{/if}}
+</strong> <br>
 
 <div class="row">
     <div class="col m12 l10 offset-l1">
