--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -1,3 +1,5 @@
+<a href="/">Home</a> > <a href="/soles">Your SOLEs</a> > <strong>{{sole.question.text}}</strong><br>
+
 <h1>{{sole.question.text}}</h1>
 
 
