--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,6 @@
-<h1>Profile page!</h1>
+<a href="/">Home</a> > <strong>Your Profile</strong><br>
 
-<hr>
-
-<h2>Your profile:</h2>
+<h1>Your Profile</h1>
 <table>
   <tr>
     <td>Name:</td>
