--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -1,8 +1,4 @@
-<h1>Add a question!</h1>
-
-
-<hr>
-
+<a href="/">Home</a> > <a href="/questions">Questions</a> > <strong>Add New</strong><br>
 
 <div class="row" style="padding-top:50px;">
     <div class="col s12 offset-m1 m10 offset-l3 l6">
