--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -1,4 +1,4 @@
-<a href="/">Home</a> > <strong>All Your SOLEs</strong><br>
+<a href="/">Home</a> > <strong>Your SOLEs</strong><br>
 
 
 {{#if soles}}
