single question link

--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -49,7 +49,9 @@
 						 style="-webkit-animation-duration:300ms;">
 						<div class="card blue lighten-1">
 							<div class="question-card card-content center-align">
+								<a href="/questions/{{id}}">
 								<div class="card-title white-text">{{text}}</div>
+								</a>
 
 							</div>
 						</div>
