--- a/views/register.hbs
+++ b/views/register.hbs
@@ -40,7 +40,7 @@
             </div>
 
             <div class="input-field col s12 center">
-                Already have an account?  <a ui-sref="login">Login</a>
+                Already have an account?  <a href="login">Login</a>
                 <!--<button class="signin-db btn waves-effect green waves-light" id="login" ui-sref="login">-->
                     <!--<i class="mdi-login left"></i>Login</button>-->
             </div>
@@ -61,7 +61,7 @@
         </form>
         <div class="row">
             <div class="col s12 center-align">
-                <span style="font-size:0.7rem;">By creating an account and logging in, I agree to the <a ui-sref="terms-of-use" target="_blank">Terms of Use</a> and <a ui-sref="privacy" target="_blank">Privacy Policy</a>.</span>
+                <span style="font-size:0.7rem;">By creating an account and logging in, I agree to the <a href="/terms-of-use" target="_blank">Terms of Use</a> and <a href="/privacy" target="_blank">Privacy Policy</a>.</span>
             </div>
         </div>
 </div>
