--- a/views/how-to-sole.hbs
+++ b/views/how-to-sole.hbs
@@ -1,7 +1,7 @@
 <a href="/">Home</a> > <strong>How to SOLE</strong><br>
 
 <div class="row">
-    <div class="col s12 offset-l1 l10">
+    <div class="col s12">
         <div class="card-panel">
 
             <div class="row">
@@ -355,8 +355,6 @@
         player.playVideo();
         window.scrollTo(0, anchor);
     }
-	$('#pushpin-wrapper').pushpin({ top: 141.5, offset: 74});
-	$('.scrollspy').scrollSpy();
 </script>
 <script>
 var maxHeight2 = 0;
