--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
 
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/js/materialize.min.js"></script>
-<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -12,6 +12,7 @@
         var elems = document.querySelectorAll('.sidenav');
         M.Sidenav.init(elems);
     });
+    initPushPin();
 </script>
 </body>
 </html>
