added initialization for scrollspy, layout cleanup (to resolve IDE warnings)

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
+<html>
+
 {{> header}}
 
+<body>
 {{> sidebar}}
 
 <main>
   {{{body}}}
 </main>
 
-
 {{> footer}}
+
+</body>
+</html>
