--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -32,7 +32,7 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
         <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
-        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources</a></li>
+        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Explore Resources<span class="new badge">4</span></a></li>
         <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li>
         <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
