--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -1,5 +1,63 @@
 <a href="/">Home</a> > <strong>Your SOLEs</strong><br>
 
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+            <div class="row">
+                <div class="col s12">
+                    <ul class="tabs">
+                        <li class="tab col s4"><a href="#planned">Planned</a></li>
+                        <li class="tab col s4"><a class="active" href="#reflect">Reflect</a></li>
+                        <li class="tab col s4 disabled"><a href="#completed">Completed</a></li>
+                    </ul>
+                </div>
+                <div id="planned" class="col s12">
+                    {{#each soles}}
+
+                        <div class="col s12">
+                                <div class="completed-sole border_upcoming_sole">
+                                    <img src="images/logos/sole-card-logo.jpg"
+                                         class="avatar-image hide-on-small-and-down">
+                                    <div class="card-title completed-sole">
+                                        {{question.text}}
+                                        <p>Class 7C</p>
+                                    </div>
+                                    <div class="completed-sole-date">
+                                        <span class="sole-day">
+                                            30
+                                        </span>
+                                        <span class="sole-month-year">
+                                            May
+                                            <br>
+                                            1985
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s12 plan_download_container right-align">
+                            <a class="waves-effect waves-light green btn">
+                                Download Plan
+                            </a>
+                        </div>
+
+                    {{/each}}
+
+
+
+
+
+                </div>
+                <div id="reflect" class="col s12">Test 2</div>
+                <div id="completed" class="col s12">Test 3</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 {{#if soles}}
 <h3>You have {{soles.length}} SOLEs:</h3>
